# api.fieldnotes

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  sqlx-data.json
.github/workflows/: build.yml  develop-pr-build.yml  prod-deploy.yml  staging-deploy.yml
db/migrations/: 20211016220615_create_users_table.sql  20211016220743_create_notes_table.sql  20211016220819_create_auth_token_table.sql  20211016220844_create_shares_table.sql  20211017094819_create_transactions_table.sql  20221018183521_remove_fund_functionality.sql  20221021181930_remove_public_column.sql
migrations/: 20210507204732_create_user_table.sql  20210708183418_create_authentication_token_table.sql  20210711204629_create_notes_table.sql  20210724180956_create_share_table.sql
src/: authentication.rs  balance.rs  endpoint.rs  env.rs  error.rs  helper.rs  main.rs  note.rs  schedule.rs  share.rs  user.rs  util.rs
src/authentication/: mod.rs
src/notes/: delete_note.rs  get_note.rs  list_notes.rs  mod.rs  save_note.rs  undelete_note.rs  update_note.rs
src/shares/: access_share.rs  create_share.rs  delete_share.rs  list_publications.rs  list_shares.rs  mod.rs
src/users/: change_password.rs  delete_user.rs  info.rs  invalidate_sessions.rs  login.rs  logout.rs  mod.rs  salt.rs  signup.rs
