[package]
name = "fieldnotes-api"
version = "0.1.0"
authors = ["Florian Marending <florian@marending.dev>"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.7"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
serde_json = "1.0"
log = "0.4"
simplelog = "^0.10.0"
bcrypt = "0.8"
rand = "0.8"
lazy_static = "1.4.0"
ring = "0.16.19"
warp = { git = "https://github.com/seanmonstar/warp.git" }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "macros", "migrate", "uuid", "chrono", "json" ] }
thiserror = "1.0"

[profile.dev]
split-debuginfo = "unpacked"
