[package]
name = "fieldnotes-api"
version = "0.1.2"
authors = ["Florian Marending <florian@marending.dev>"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.9"
hyper = { version = "0.14", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.2", features = ["full"] }
axum = { version = "0.5" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
serde_json = "1.0"
log = "0.4"
simplelog = "0.10"
bcrypt = "0.13"
rand = "0.8"
ring = "0.16.20"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "postgres", "macros", "migrate", "uuid", "chrono", "json", "offline" ] }
thiserror = "1.0"

[profile.dev]
split-debuginfo = "unpacked"
